# PythonWebs

./: .gitignore  README.md  pyproject.toml
Docs/: LLMs.md  LangChain.md  Litestar.md  LlamaIndex.md  OpenTelemetry.md  Pydantic.md  Python认证+授权.md
FlaskAuthentication/: extentions.py  main.py
FlaskAuthentication/configs/: flask_config.py
FlaskAuthentication/doc/: Flask-HttpAuth.postman_collection.json  Flask-Login.postman_collection.json  Flask-REST-API Token验证.postman_collection.json
FlaskAuthentication/forms/: log_form.py
FlaskAuthentication/models/: users.py
FlaskAuthentication/views/: __init__.py  login_auth.py  rest_auth.py  views1.py
HelloDjango/: Django.md  manage.py
HelloDjango/api/: DRF.md  api_urls.py  custom_auth_permission.py  drf_serializers_demos.py  models.py  models.sql  permissions.py  rest_serializers_demos.py  serializers.py  views.py
HelloDjango/apps/api_drf/: apps.py  models.py  models.sql  urls_drf.py  views.py
HelloDjango/apps/blog_app/: admin.py  apps.py  models.py  urls_blog.py  views.py
HelloDjango/blog/: admin.py  models.py
HelloDjango/blog_app/: admin.py  apps.py  models.py
HelloDjango/comment_app/: apps.py
HelloDjango/hello_django/: asgi.py  urls.py  wsgi.py
HelloDjango/hello_django/settings/: base.py  dev.py  prod.py
HelloDjango/ideablog/: asgi.py  urls.py  wsgi.py
HelloDjango/ideablog/settings/: base.py  dev.py  prod.py
HelloDjango/scripts/: usage_drf_serializers.py
HelloDjango/sidebar_app/: apps.py  models.py
HelloFastAPI/: FastAPI.md  config.py  database.py  hello.py  hello_main.py  main.py  settings.py  uvicorn_run.py
HelloFastAPI/api/: __init__.py  api_views.py  file_views.py  rest_views.py  schemas.py  views_batch_process.py  views_controller.py  views_restful.py  views_streaming.py
HelloFastAPI/app1/: __init__.py  crud_actions.py  models.py  schemas.py  table_ddl.sql  user_views.py
HelloFastAPI/app_auth/: __init__.py  auth_views.py  schemas.py
HelloFastAPI/auth_app/: FastAPI认证+授权说明.md  __init__.py  auth_dependencies.py  auth_jwt_views.py  auth_utils.py  auth_views.py  authx_views.py  custom_jwt_views.py  dependencies.py  login_views.py  models.py  schemas.py  views_authx.py  views_jwt_auth.py  views_jwt_custom.py  views_login.py
HelloFastAPI/dependencies/: auth_dep.py  database_dep.py
HelloFastAPI/envs/: dev.env  prod.env
HelloFastAPI/test/: test_streaming.py
HelloFastAPI/user_app/: __init__.py  models.py  schemas.py  user_views.py
HelloFastAPI/utils/: database.py
HelloFlask/: Flask.md  configs.py  extensions.py  main.py  main_security.py
HelloFlask/auth_app/: __init__.py  auth_main.py  configs.py  exts.py  models.py  principal.py  views_http_auth.py  views_jwt_auth.py  views_login_auth.py  views_principal.py  views_rest_auth.py  views_security.py
HelloFlask/auth_app/doc/: Flask-HttpAuth.postman_collection.json  Flask-JWT.postman_collection.json  Flask-Login.postman_collection.json  Flask认证.md  Flask身份认证+权限控制.md
HelloFlask/file_app/: __init__.py  views_file.py
HelloFlask/postman/: Flask-Principal.postman_collection.json  Flask-Webargs.postman_collection.json
HelloFlask/rest_app/: Flask-RESTful.postman_collection.json  __init__.py  classful_views.py  doc.md  flask_classful.py  person_resource.py  practice_mashmallow.py  restful_views.py  student_resource.py  views_classful.py  views_restful.py  views_webargs.py
HelloFlask/rest_app/doc/: Flask-REST-API.md  Flask-REST-API.postman_collection.json  Flask-RESTful.postman_collection.json  doc.md
HelloLitestar/: Litestar.md  config.py  main.py  middlewares.py
HelloLitestar/api/: __init__.py  models.py  views_controller.py  views_dependency.py  views_func.py
HelloLitestar/auth/: __init__.py  auth_middlewares.py  middlewares_auth.py  models.py  views_auth.py
HelloLitestar/auth_app/: middlewares_auth.py  views_auth.py
HelloLitestar/test/: test_app.py
LLMsApp/: litellm_practice.py  llm_request.py  openai_practice.py
LLMsApp/langchain_practice/: deepagents_practice.py  langchain_agents_practice.py  langchain_practice.py  langgraph_practice.py  simple_mcp_server.py
LLMsApp/mcp/: fastmcp_server.py  mcp_client.py
LLMsApp/rag/: llamaindex_practice.py
MCP/: MCP.md  fastmcp_client.py  logging_util.py  mcp_client.py  mcp_server.py
ORM/: orm_rbac.py  pydantic_practice.py  sqlalchemy_core.py  sqlalchemy_engine.py  sqlalchemy_relations.py  sqlmodel_practice.py  tables.sql
PlotlyDash/: hello_dash.py  hello_plotly.py
TemplateEngine/: jinjia2_practice.py
TemplateEngine/templates/: mytemplate.html
WebBasic/: anyio_usage.py  asyncio_event_loop.py  asyncio_network.py  asyncio_practice.py  asyncio_usage.py  concurrency_process.py  concurrency_process_pool_df.py  concurrency_thread.py  concurrency_thread_request.py  ftp_util.py  httpx_practice.py  minio_practice.py  nc_client.py  nc_mock.py  opentelemetry_usage.py  prometheus_usage.py  typing_practice.py
WebSecurity/: Python认证+授权.md  practice_itsdangerous.py  practice_jwt.py
orm/: peewee_practice.py  pydantic_practice.py  sqlalchemy_async.py  sqlalchemy_core.py  sqlalchemy_engine.py  sqlalchemy_orm.py  sqlalchemy_practice.py  sqlalchemy_relations.py  sqlmodel_practice.py  tables.ddl
